--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -1,15 +1,43 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext {
+        version_appcompat = "1.2.0"
+        version_core = "1.3.1"
+        version_coroutine = "1.3.7"
+        version_constraint_layout = "2.0.0"
+        version_expresso = "3.2.0"
+        version_fragment = "1.0.0" // 1.2.5 in DevByteViewer
+        version_gradle = '4.0.1'
+        version_joda = "2.10"
+        version_junit_test = "4.13"
+        version_junit_android_test = "1.1.1"
+        version_kotlin = '1.3.72'
+        version_kotlin_coroutines = "1.1.0" // 1.3.0 from ARadar
+        version_lifecycle = "2.2.0"
+        version_lifecycle_extensions = "2.2.0"
+        version_moshi = "1.8.0"
+        version_navigation = '1.0.0'
+        version_picasso = "2.5.2"
+        version_recyclerview = "1.1.0"
+        version_retrofit = "2.5.0"
+        version_retrofit_a = "2.6.2"
+        version_retrofit_coroutines_adapter = "0.9.2"
+        version_room = "2.2.5"
+        version_timber = "4.7.1"
+        version_work = "1.0.1"
+    }
+
     repositories {
         google()
         jcenter()
-        
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:$version_gradle"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
+
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,7 +48,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
